# complete_coverage_planner

./: CMakeLists.txt  package.xml
config/: params_costmap.yaml
include/complete_coverage_planner/: complete_coverage_planner.hpp  costmap_client.hpp  full_coverage_path_planner.hpp  spiral_stc.hpp
launch/: explore.launch.py
src/: common.cpp  complete_coverage.cpp  complete_coverage_planner.cpp  costmap_client.cpp  full_coverage_path_planner.cpp  spiral_stc.cpp
